--- a/index.html
+++ b/index.html
@@ -226,6 +226,17 @@
 <div id="lightmode" class="bg-body mt-2 ms-5 text-center d-none"><em class="fa-solid fa-sun mt-2 orange"></em></div>    
   </div>
   <!-- light-dark-mode--> 
+  <!--weather update div starts-->
+   <div  class="weather-div">
+
+
+   </div>
+   <div class="weather-div">
+<span></span>
+
+
+   </div>
+  <!--weather update div ends-->
 </div>
 
 <div id="carouselControls" class="carousel slide" data-bs-ride="carousel">
