--- a/fun.html
+++ b/fun.html
@@ -11,13 +11,15 @@
         <script src="https://kit.fontawesome.com/fd15ff6187.js" crossorigin="anonymous"></script>
     <title>weather-api-experiment</title>
 </head>
-<body class="container">
+<body class="container bg-dark text-white text-center">
     <div class="" id="weather-icon">
 
     </div>
     <div class="" id="weather-description">
+        <p id="place"></p>
         <p id="temperature">22 C</p>
         <p id="weather-type">hazy</p>
     </div>
+    <script src="./weather_update.js"></script>
 </body>
 </html>
