--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 <!--Custom-CSS-->
     <link rel="stylesheet" href="./custom.css">
     <link rel="stylesheet" href="./coupon-code.css">
+    <link rel="stylesheet" href="./dist/wu-icons-style.css">
+    <link rel="stylesheet" href="./dist/wu-icons-style.min.css">
 </head>
 <body>
     <div class="super-container">
@@ -227,13 +229,15 @@
   </div>
   <!-- light-dark-mode--> 
   <!--weather update div starts-->
-   <div  class="weather-div float-start">
-
+   <div id="w-icon"  class="weather-div float-start p-1 text-white">
+<em class="wu wu-black wu-32 wu-clear mt-2 ms-2"></em>
 
    </div>
    <div class="weather-div float-start">
-<span></span>
-
+<span id="place" class="ms-1 mt-2 text-white"></span>
+<span id="temperature" class="ms-1 mt-2 text-white"></span>
+<span id="type" class="ms-1 mt-2 text-white"></span>
+<span id="notification"></span>
 
    </div>
   <!-- update div ends-->
