--- a/fun.html
+++ b/fun.html
@@ -20,6 +20,6 @@
         <p id="temperature">22 C</p>
         <p id="weather-type">hazy</p>
     </div>
-    <script src="./weather_update.js"></script>
+    <script src=""></script>
 </body>
 </html>
