--- a/index.html
+++ b/index.html
@@ -229,11 +229,11 @@
   </div>
   <!-- light-dark-mode--> 
   <!--weather update div starts-->
-   <div id="w-icon"  class="weather-div float-start p-1 text-white">
-<em class="wu wu-black wu-32 wu-clear mt-2 ms-2"></em>
+   <div id="w-icon"  class="weather-div float-start p-1 text-white mt-2 ms-2">
+<img src="./dist/icons/" alt="">
 
    </div>
-   <div class="weather-div float-start">
+   <div class="weather-div float-start mt-2 ms-1">
 <span id="place" class="ms-1 mt-2 text-white"></span>
 <span id="temperature" class="ms-1 mt-2 text-white"></span>
 <span id="type" class="ms-1 mt-2 text-white"></span>
@@ -736,5 +736,7 @@
   <!--Coupon modal ends-->
 <script src="./dark-light.js"></script>
 <script src="./coupon-code.js"></script>
+
 </body>
 </html>
+<!--//IIITCSE15U038EA1F59 -failed transaction-->
