--- a/index.html
+++ b/index.html
@@ -229,11 +229,11 @@
   </div>
   <!-- light-dark-mode--> 
   <!--weather update div starts-->
-   <div id="w-icon"  class="weather-div float-start p-1 text-white mt-2 ms-2">
-<img src="./dist/icons/" alt="">
+   <div id="w-icon"  class="weather-div float-start p-1 mt-1 ms-2 bg-white" style="border-radius: 50%;">
+
 
    </div>
-   <div class="weather-div float-start mt-2 ms-1">
+   <div class="weather-div float-start mt-3 ms-1">
 <span id="place" class="ms-1 mt-2 text-white"></span>
 <span id="temperature" class="ms-1 mt-2 text-white"></span>
 <span id="type" class="ms-1 mt-2 text-white"></span>
