--- a/index.html
+++ b/index.html
@@ -735,7 +735,7 @@
   </div>
   <!--Coupon modal ends-->
 <script src="./dark-light.js"></script>
-<script src="./coupon-code.js"></script>
+<script src="./coupon-code-weather-display.js"></script>
 
 </body>
 </html>
