--- a/index.html
+++ b/index.html
@@ -194,33 +194,35 @@
         
         </div>
     </div>
-  <div class="float-start" style="margin-top :9px ;">
-    <ul class="list-unstyled ms-0">
-    <li class="d-inline-block hover me-1 p-1"><a href="#" class="nav-link fs-8 text-white">Best Sellers</a></li>
-    <li class="d-inline-block hover me-1 p-1"><a href="#" class="nav-link fs-8 text-white">Today's Deals</a></li>
-    <li class="d-inline-block hover me-1 p-1"><a href="#" class="nav-link fs-8 text-white">Mobiles</a></li>
-    <li class="d-inline-block hover me-1 p-1"><a href="#" class="nav-link fs-8 text-white">Customer Service</a></li>
-    <li class="d-inline-block hover me-1 p-1"><a href="#" class="nav-link fs-8 text-white">Books</a></li>
-    <li class="d-inline-block hover me-1 p-1"><a href="#" class="nav-link fs-8 text-white">Electronics</a></li>
-    <li class="d-inline-block me-1 ">
-        <a href="#" class="nav-link fs-8 text-white">
-            <div class="dropdown">
-                <a class="btn btn-dark dropdown-toggle fs-8" type="button" id="triggerId3" data-bs-toggle="dropdown"aria-expanded="false" style="margin-top:-4px ;z-index:-20000 ;">Prime</a>
-            <ul class="dropdown-menu db">
-             <li class="dropdown-item">
-               <a href="#" class="text-decoration-none">
-                <img src="https://m.media-amazon.com/images/G/31/prime/NavFlyout/TryPrime/2018/Apr/IN-Prime-PIN-TryPrime-MultiBen-Apr18-400x400._CB442254244_.jpg" alt="Prime">
-               </a> 
-            </li>
-            </ul>
-            </div>
-        </a>
-    </li>
-    <li class="d-inline-block hover me-1 p-1"><a href="#" class="nav-link fs-8 text-white">Fashion</a></li>
-    <li class="d-inline-block hover me-1 p-1"><a href="#" class="nav-link fs-8 text-white">New Releases</a></li>
-    <li class="d-inline-block hover me-1 p-1"><a href="#" class="nav-link fs-8 text-white">Home & Kitchen</a></li>
-    <li class="d-inline-block hover me-1 p-1"><a href="#" class="nav-link fs-8 text-white">Amazon Pay</a></li>
-      </ul>
+  <div class="float-start ">
+    <div class="">
+        <ul class="list-unstyled ms-0 d-flex justify-content-center align-items-center pt-2">
+        <li class="d-inline-block hover me-1 p-1"><a href="#" class="nav-link fs-8 text-white">Best Sellers</a></li>
+        <li class="d-inline-block hover me-1 p-1"><a href="#" class="nav-link fs-8 text-white">Today's Deals</a></li>
+        <li class="d-inline-block hover me-1 p-1"><a href="#" class="nav-link fs-8 text-white">Mobiles</a></li>
+        <li class="d-inline-block hover me-1 p-1"><a href="#" class="nav-link fs-8 text-white">Customer Service</a></li>
+        <li class="d-inline-block hover me-1 p-1"><a href="#" class="nav-link fs-8 text-white">Books</a></li>
+        <li class="d-inline-block hover me-1 p-1"><a href="#" class="nav-link fs-8 text-white">Electronics</a></li>
+        <li class="d-inline-block me-1 ">
+            <a href="#" class="nav-link fs-8 text-white">
+                <div class="dropdown">
+                    <a class="btn btn-dark dropdown-toggle fs-8" type="button" id="triggerId3" data-bs-toggle="dropdown"aria-expanded="false" style="margin-top:-4px ;z-index:-20000 ;">Prime</a>
+                <ul class="dropdown-menu db">
+                 <li class="dropdown-item">
+                   <a href="#" class="text-decoration-none">
+                    <img src="https://m.media-amazon.com/images/G/31/prime/NavFlyout/TryPrime/2018/Apr/IN-Prime-PIN-TryPrime-MultiBen-Apr18-400x400._CB442254244_.jpg" alt="Prime">
+                   </a> 
+                </li>
+                </ul>
+                </div>
+            </a>
+        </li>
+        <li class="d-inline-block hover me-1 p-1"><a href="#" class="nav-link fs-8 text-white">Fashion</a></li>
+        <li class="d-inline-block hover me-1 p-1"><a href="#" class="nav-link fs-8 text-white">New Releases</a></li>
+        <li class="d-inline-block hover me-1 p-1"><a href="#" class="nav-link fs-8 text-white">Home & Kitchen</a></li>
+        <li class="d-inline-block hover me-1 p-1"><a href="#" class="nav-link fs-8 text-white">Amazon Pay</a></li>
+          </ul>
+      </div>
   </div>
    <!-- light-dark-mode--> 
   <div class="float-start">
@@ -229,7 +231,7 @@
   </div>
   <!-- light-dark-mode--> 
   <!--weather update div starts-->
-   <div id="w-icon"  class="weather-div float-start p-1 mt-1 ms-2 bg-white" style="border-radius: 50%;">
+   <div id="w-icon"  class="weather-div float-start p-1 mt-1 ms-2 bg-body" style="border-radius: 50%;">
 
 
    </div>
